// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModelDetails /> should render properly 1`] = `
.emotion-0 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-1 {
  color: #ffffff;
  font-weight: 500;
  font-size: 21px;
  line-height: 30px;
  padding-bottom: 16px;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  list-style: none;
  line-height: 23px;
}

.emotion-3 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-5 {
  height: 16px;
}

.emotion-6 {
  border: none;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-12 button,
.emotion-12 a {
  margin-right: 16px;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-13,
.emotion-13:hover,
.emotion-13:visited,
.emotion-13 .noop {
  background-color: #808080;
}

.emotion-13:hover,
.emotion-13 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-13[aria-disabled=true],
.emotion-13 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-14 div {
  margin-left: 0;
}

.emotion-14 button {
  margin-right: 0;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-15:hover div,
.emotion-15:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-15:hover button,
.emotion-15:focus-within button {
  color: #ffffff;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-17 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-17:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-18:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-19 {
  font-size: 15px;
  line-height: 19px;
  padding: 8px;
}

.emotion-20 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-21 {
  font-size: 15px;
  line-height: 19px;
  padding-top: 16px;
}

<div>
  
  <div>
    <div
      className="emotion-0"
    >
      Model
       Name:
    </div>
    <h3
      className="emotion-1"
    >
      console_face_recognition
    </h3>
  </div>
  <ul
    className="emotion-2"
  >
    <li>
      <span
        className="emotion-3"
      >
        Model Type
        :
      </span>
       
      ZVI_FACE_RECOGNITION
    </li>
    <li>
      <span
        className="emotion-3"
      >
        Description
        :
      </span>
       
    </li>
  </ul>
  <div
    className="emotion-5"
  />
  <hr
    className="emotion-6"
  />
  <div
    className="emotion-5"
  />
  <div
    className="emotion-8"
  >
    <div>
      <ul
        className="emotion-2"
      >
        <li>
          <span
            className="emotion-3"
          >
            Last Trained
            :
          </span>
           
          ?
        </li>
        <li>
          <span
            className="emotion-3"
          >
            Last Applied
            :
          </span>
           
          ?
        </li>
      </ul>
      <div
        className="emotion-12"
      >
        <button
          aria-disabled={true}
          className="emotion-13"
          onClick={[Function]}
          type="button"
        >
          Train
        </button>
        <div
          className="emotion-14"
        >
          <div
            className="emotion-15"
          >
            <button
              aria-details="TrainingOptions"
              aria-label="Training Options"
              className="emotion-16"
              type="button"
            >
              <svg
                data-file-name="help.svg"
                height={20}
              />
            </button>
            <div
              className="emotion-17"
              id="TrainingOptions"
              role="tooltip"
            >
              <div
                className="emotion-18"
              />
              <div
                className="emotion-19"
              >
                <h3
                  className="emotion-20"
                >
                  Train Model
                </h3>
                Train a model without applying it to your assets.
                <h3
                  className="emotion-21"
                >
                  Train & Test
                </h3>
                Train and apply the model to your test set ONLY. This enables you to view the results in the matrix and assess your model’s performance. To save processing time, make adjustments to your model before applying it to all of your assets.
                <h3
                  className="emotion-21"
                >
                  Train & Apply
                </h3>
                Train and apply the model to all the assets in the project.
                <h3
                  className="emotion-21"
                >
                  Delete
                </h3>
                Delete a model. This action cannot be undone.
                <br />
                <i>
                  Note: Labels that you added to your assets, either manually or through training, remain attached.
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ModelMatrixLink
      modelId="621bf775-89d9-1244-9596-d6df43f1ede5"
      projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    />
  </div>
</div>
`;

exports[`<ModelDetails /> should render properly 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-2 a:hover {
  color: #3A5DFF;
}

.emotion-3 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-4 {
  color: #ffffff;
  font-weight: 500;
  font-size: 21px;
  line-height: 30px;
  padding-bottom: 16px;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  list-style: none;
  line-height: 23px;
}

.emotion-6 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-8 {
  height: 16px;
}

.emotion-9 {
  border: none;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-15 button,
.emotion-15 a {
  margin-right: 16px;
}

.emotion-16 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-16,
.emotion-16:hover,
.emotion-16:visited,
.emotion-16 .noop {
  background-color: #808080;
}

.emotion-16:hover,
.emotion-16 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-16[aria-disabled=true],
.emotion-16 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-17 div {
  margin-left: 0;
}

.emotion-17 button {
  margin-right: 0;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-18:hover div,
.emotion-18:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-18:hover button,
.emotion-18:focus-within button {
  color: #ffffff;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-20 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-20:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-21:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-22 {
  font-size: 15px;
  line-height: 19px;
  padding: 8px;
}

.emotion-23 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-24 {
  font-size: 15px;
  line-height: 19px;
  padding-top: 16px;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#c92300"
        data-file-name="warning.svg"
        height={20}
      />
      <div
        className="emotion-2"
        role="alert"
      >
        Something went wrong. Please try again.
      </div>
    </div>
  </div>
  <div>
    <div
      className="emotion-3"
    >
      Model
       Name:
    </div>
    <h3
      className="emotion-4"
    >
      console_face_recognition
    </h3>
  </div>
  <ul
    className="emotion-5"
  >
    <li>
      <span
        className="emotion-6"
      >
        Model Type
        :
      </span>
       
      ZVI_FACE_RECOGNITION
    </li>
    <li>
      <span
        className="emotion-6"
      >
        Description
        :
      </span>
       
    </li>
  </ul>
  <div
    className="emotion-8"
  />
  <hr
    className="emotion-9"
  />
  <div
    className="emotion-8"
  />
  <div
    className="emotion-11"
  >
    <div>
      <ul
        className="emotion-5"
      >
        <li>
          <span
            className="emotion-6"
          >
            Last Trained
            :
          </span>
           
          ?
        </li>
        <li>
          <span
            className="emotion-6"
          >
            Last Applied
            :
          </span>
           
          ?
        </li>
      </ul>
      <div
        className="emotion-15"
      >
        <button
          aria-disabled={true}
          className="emotion-16"
          onClick={[Function]}
          type="button"
        >
          Train
        </button>
        <div
          className="emotion-17"
        >
          <div
            className="emotion-18"
          >
            <button
              aria-details="TrainingOptions"
              aria-label="Training Options"
              className="emotion-19"
              type="button"
            >
              <svg
                data-file-name="help.svg"
                height={20}
              />
            </button>
            <div
              className="emotion-20"
              id="TrainingOptions"
              role="tooltip"
            >
              <div
                className="emotion-21"
              />
              <div
                className="emotion-22"
              >
                <h3
                  className="emotion-23"
                >
                  Train Model
                </h3>
                Train a model without applying it to your assets.
                <h3
                  className="emotion-24"
                >
                  Train & Test
                </h3>
                Train and apply the model to your test set ONLY. This enables you to view the results in the matrix and assess your model’s performance. To save processing time, make adjustments to your model before applying it to all of your assets.
                <h3
                  className="emotion-24"
                >
                  Train & Apply
                </h3>
                Train and apply the model to all the assets in the project.
                <h3
                  className="emotion-24"
                >
                  Delete
                </h3>
                Delete a model. This action cannot be undone.
                <br />
                <i>
                  Note: Labels that you added to your assets, either manually or through training, remain attached.
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ModelMatrixLink
      modelId="621bf775-89d9-1244-9596-d6df43f1ede5"
      projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    />
  </div>
</div>
`;
